--- a/index.html
+++ b/index.html
@@ -21,6 +21,16 @@
         <Label>age</Label><br><br>
         <input type="number" name="age" id="age" placeholder="Enter your age"><br><br>
         </div>
+        <div id="select">
+            <select>
+            <option name="Select Your Role">Select Your Role</option>
+            <option value="Student">Student</option>
+            <option value="Full Time Job">Full Time Job</option>
+            <option value="Full Time Learner">Full Time Learner</option>
+            <option value="Prefer Not TO Say">Prefer Not TO Say</option>
+            <option value="Others">Others</option>
+            </select>
+        </div>
 
 
 
