--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
         <input type="email" name="email" id="email" placeholder="Enter your email"><br><br>
         <Label>age</Label><br><br>
         <input type="number" name="age" id="age" placeholder="Enter your age"><br><br>
+        <label>Which option best describes your current role?</label>
         </div>
         <div id="select">
             <select>
